<resources>
    <string name="app_name">Travelin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="go_back_to_login">Go Back to Login</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="travelin_logo">Travelin Logo</string>
    <string name="textview">TextView</string>
    <string name="textView">textview</string>
    <string name="please_confirm_email">Please Confirm Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_email_text">Password reset email has been sent to you!</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">NAME</string>
    <string name="city">city</string>
    <string name="info">Info</string>
    <string name="tag">Tag</string>
    <string name="hotel">HotelName</string>
    <string name="hotels">Hotels</string>
    <string name="tags">Related Tags</string>
    <string name="findflights">Find Flights</string>
    <string name="findhotels">Find Hotels</string>
    <string name="home">Home</string>
    <string name="forum">Forum</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="send_message">Send Message</string>
    <string name="bio">BIO</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="rating">Rating</string>
    <string name="reviews">Reviews</string>
    <string name="photos">photos</string>
    <string name="interests">INTERESTS : </string>
    <string name="profile">Profile</string>
    <string name="nav_profile">Profile</string>
    <string name="block">BLOCK</string>
    <string name="report">REPORT</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="editname">Edit Name</string>
    <string name="name2">Name :</string>
    <string name="bio2">Bio :</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="gender">Gender :</string>
    <string name="interests2">Interests :</string>
    <string name="add_interests">Add Interests</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="change_password">CHANGE PASS</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="go_back">Go Back</string>
    <string name="confirm_identity">Confirm Identity</string>
    <string name="give_rating_out_of_5">Give rating out of 5</string>
    <string name="rate_user">Rate User</string>
    <string name="search_users">Search Users</string>
    <string name="create_a_new_post">Create a new post</string>
    <string name="add_content">Add content</string>
    <string name="post_image">post image</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="search_flights">Search Flights</string>
    <string name="more">more</string>
    <string name="add_title">Add title</string>
    <string name="add_comment">Add Comment</string>
    <string name="reportPost">REPORT</string>
    <string name="hide">HIDE</string>
    <string name="delete">DELETE</string>
    <string name="editCAPS">EDIT</string>
    <string name="sort_by">Sort by:</string>
    <string name="popularity">Popularity</string>
    <string name="time">Recent</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="edit_title">Edit Title</string>
    <string name="saveCAPS">SAVE</string>
    <string name="register_account">Register Account</string>
    <string name="defaultRadio">Default</string>
    <string name="comments">Comments</string>
    <string name="reviewsCAPS">REVIEWS</string>
    <string name="edit_my_review">Add/Edit Review</string>
</resources>
