<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/baselinehomewhite24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_forum"
        android:enabled="true"
        android:icon="@drawable/baselineforum"
        android:title="@string/forum"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/baselinesearchwhite24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/baselineaccountcirclewhite24dp"
        android:title="@string/nav_profile"
        app:showAsAction="ifRoom" />
</menu>