<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/register_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/register_background"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/register_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/input_register_background"
            android:hint="@string/prompt_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/input_register_background"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/input_register_background"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/input_register_background"
            android:hint="@string/prompt_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/login_background"
            android:text="@string/register"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/register_backtologin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="70dp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/go_back_to_login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/input_login_hint"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>