<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/login_background"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/forget_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/confirm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/please_confirm_email"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <AutoCompleteTextView
            android:id="@+id/forget_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/login_input_background"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

        <Button
            android:id="@+id/forget_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/login_button"
            android:padding="17dp"
            android:text="@string/reset_password"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/forget_backtologin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="70dp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/go_back_to_login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/input_login_hint"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>