<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/register_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/register_background"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/confirmDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:text="@string/confirm_identity"
            android:textColor="@color/white2"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirm_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/input_register_background"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/input_register_background"
            android:hint="@string/prompt_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />


        <Button
            android:id="@+id/confirm_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/login_background"
            android:text="@string/confirm_identity"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/go_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="70dp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/go_back"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/input_login_hint"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>