<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/graygradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:background="@null"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <Button
                android:id="@+id/deleteprofilebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:text="@string/delete_profile"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--<FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/addcamera"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toEndOf="@id/profile_image"
                    app:layout_constraintTop_toBottomOf="@id/profile_image"/>

            </FrameLayout>-->


            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/profilepic"
                app:civ_border_color="@color/white"
                app:civ_border_width="3dp"
                app:layout_constraintBottom_toTopOf="@id/editName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.33" />

            <ImageView
                android:id="@+id/addpictures"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="235dp"
                android:layout_marginEnd="95dp"
                android:background="@drawable/addcamera"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/add_pictures"
                android:src="@null"
                app:layout_constraintCircle="@+id/profile_image"
                app:layout_constraintCircleAngle="135"
                app:layout_constraintCircleRadius="120dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/black1"
                android:hint="@string/editname"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editBio" />


            <TextView
                android:id="@+id/editBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@color/black1"
                android:hint="@string/edit_bio"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/editInterests"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editName" />


            <TextView
                android:id="@+id/editInterests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@color/black1"
                android:hint="@string/add_interests"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/radio_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editBio" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:text="@string/gender"
                android:textColor="@color/white"

                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editInterests" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:orientation="horizontal"

                android:padding="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editInterests">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:onClick="onRadioButtonClick"
                    android:text="@string/male"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClick"
                    android:text="@string/female"
                    android:textSize="18sp" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/linearlayout3"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <Button
                    android:id="@+id/saveprofilebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_border"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/save_profile"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@id/changepasswordbutton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />


                <Button
                    android:id="@+id/changepasswordbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_border"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/change_password"
                    android:textColor="@color/white"

                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/saveprofilebutton" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhiteTrans"
        app:itemBackground="@color/login_background"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="unlabeled"
        android:layout_gravity="bottom"
        app:menu="@menu/menu" />


</RelativeLayout>
